# guided-traversal-engine

./: .gitignore  CMakeLists.txt  README.md  context.md  debug_coverage.py  debug_ndcg.py  debug_runs.py  debug_scores.py  inspect_json.py  main.py  res.md
src/: Float16.hpp  IndexReader.cpp  IndexReader.hpp  MaxScoreGT.cpp  MaxScoreGT.hpp  Metrics.cpp  Metrics.hpp  PostingIterator.cpp  PostingIterator.hpp  main.cpp
